deployment/kubernetes/overlays/ou/production/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
spec:
  tls:
    - hosts:
        - rap.cs.ou.nl
      secretName: rap-tls-production-secret
  rules:
    - host: rap.cs.ou.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: rap
                port:
                  number: 80
